--- a/index.html
+++ b/index.html
@@ -7,25 +7,34 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Webstudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo-full"
+          ><span class="web-logo">Web</span>Studio</a
+        >
         <ul>
           <li>
-            <a href="">Studio</a>
+            <a href="" class="header-studio">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a href="" class="header-portfolio">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a href="" class="header-contacts">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="address-header">
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
@@ -38,8 +47,8 @@
 
     <main>
       <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="main-header">Effective Solutions for Your Business</h1>
+        <button type="button" class="main-button">Order Service</button>
       </section>
 
       <section>
@@ -47,7 +56,7 @@
           <!--hidden header2-->
           About
         </h2>
-        <ul>
+        <ul class="header-discr">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -79,7 +88,7 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
+        <h2 class="our-team-header">Our Team</h2>
         <ul>
           <li>
             <img
@@ -126,8 +135,10 @@
     </main>
 
     <footer>
-      <a href="/">WebStudio</a>
-      <p>
+      <a href="./index.html" class="logo-full"
+        ><span class="web-logo">Web</span>Studio</a
+      >
+      <p class="footer-discr">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
