--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Webstudio</title>
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -129,6 +133,72 @@
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2 class="header-our-portfolio">Our Portfolio</h2>
+        <ul class="port-sect">
+          <li>
+            <img
+              src="./images/img-hw-02/img-5.jpg"
+              width="360"
+              height="300"
+              alt="banking app"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-hw-02/img-4.jpg"
+              width="360"
+              height="300"
+              alt="cashless payment"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-hw-02/img-3.jpg"
+              width="360"
+              height="300"
+              alt="meditation app"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-hw-02/img-2.jpg"
+              width="360"
+              height="300"
+              alt="taxi service"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-hw-02/img-1 (1).jpg"
+              width="360"
+              height="300"
+              alt="screen illustrations"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-hw-02/img (1).jpg"
+              width="360"
+              height="300"
+              alt="online courses"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
