--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           </li>
           <li>
             <img
-              src="./images/img-hw-02/img-1 (1).jpg"
+              src="./images/img-hw-02/img-1.jpg"
               width="360"
               height="300"
               alt="screen illustrations"
@@ -192,7 +192,7 @@
           </li>
           <li>
             <img
-              src="./images/img-hw-02/img (1).jpg"
+              src="./images/img-hw-02/img.jpg"
               width="360"
               height="300"
               alt="online courses"
