--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="" class="header-studio">Studio</a>
           </li>
           <li>
-            <a href="" class="header-portfolio">Portfolio</a>
+            <a href="#our-portfolio" class="header-portfolio">Portfolio</a>
           </li>
           <li>
             <a href="" class="header-contacts">Contacts</a>
@@ -138,7 +138,7 @@
       </section>
 
       <section>
-        <h2 class="header-our-portfolio">Our Portfolio</h2>
+        <h2 class="header-our-portfolio" id="our-portfolio">Our Portfolio</h2>
         <ul class="port-sect">
           <li>
             <img
