--- a/index.html
+++ b/index.html
@@ -18,28 +18,34 @@
       href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <nav>
         <a href="./index.html" class="logo-full"
-          ><span class="web-logo">Web</span>Studio</a
+          >Web<span class="web-logo">Studio</span></a
         >
         <ul>
           <li>
             <a href="" class="header-studio">Studio</a>
           </li>
           <li>
-            <a href="#our-portfolio" class="header-portfolio">Portfolio</a>
+            <a href="" class="header-portfolio">Portfolio</a>
           </li>
           <li>
             <a href="" class="header-contacts">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul class="address-header">
-          <li>
+      <address class="address-header">
+        <ul>
+          <li class="address-list-item">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
@@ -50,40 +56,40 @@
     </header>
 
     <main>
-      <section>
+      <section class="section-1-main">
         <h1 class="main-header">Effective Solutions for Your Business</h1>
         <button type="button" class="main-button">Order Service</button>
       </section>
 
       <section>
-        <h2>
+        <h2 class="section-2-h3">
           <!--hidden header2-->
           About
         </h2>
         <ul class="header-discr">
-          <li>
-            <h3>Strategy</h3>
+          <li class="section-2-list">
+            <h3 class="section-2-h3">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
+          <li class="section-2-list">
+            <h3 class="section-2-h3">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
+          <li class="section-2-list">
+            <h3 class="section-2-h3">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
+          <li class="section-2-list">
+            <h3 class="section-2-h3">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -91,6 +97,7 @@
           </li>
         </ul>
       </section>
+
       <section>
         <h2 class="our-team-header">Our Team</h2>
         <ul>
@@ -147,8 +154,8 @@
               height="300"
               alt="banking app"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="secton-4-h3">Banking App</h3>
+            <p class="section-4-p">App</p>
           </li>
           <li>
             <img
@@ -157,8 +164,8 @@
               height="300"
               alt="cashless payment"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="secton-4-h3">Cashless Payment</h3>
+            <p class="section-4-p">Marketing</p>
           </li>
           <li>
             <img
@@ -167,8 +174,8 @@
               height="300"
               alt="meditation app"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="secton-4-h3">Meditation App</h3>
+            <p class="section-4-p">App</p>
           </li>
           <li>
             <img
@@ -177,8 +184,8 @@
               height="300"
               alt="taxi service"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="secton-4-h3">Taxi Service</h3>
+            <p class="section-4-p">Marketing</p>
           </li>
           <li>
             <img
@@ -187,8 +194,8 @@
               height="300"
               alt="screen illustrations"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="secton-4-h3">Screen Illustrations</h3>
+            <p class="section-4-p">Design</p>
           </li>
           <li>
             <img
@@ -197,16 +204,16 @@
               height="300"
               alt="online courses"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="secton-4-h3">Online Courses</h3>
+            <p class="section-4-p">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
+    <footer class="footer-all">
       <a href="./index.html" class="logo-full"
-        ><span class="web-logo">Web</span>Studio</a
+        >Web<span class="web-logo">Studio</span></a
       >
       <p class="footer-discr">
         Increase the flow of customers and sales for your business with digital
