--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         </ul>
       </section>
 
-      <section>
+      <section class="section-3-main">
         <h2 class="our-team-header">Our Team</h2>
-        <ul>
+        <ul class="section-3-ul">
           <li>
             <img
               src="./images/img-3.jpg"
@@ -108,7 +108,7 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="section-2-h3">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -118,7 +118,7 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="section-2-h3">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -128,7 +128,7 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="section-2-h3">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -138,7 +138,7 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="section-2-h3">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
