--- a/index.html
+++ b/index.html
@@ -33,23 +33,27 @@
         >
         <ul>
           <li>
-            <a href="" class="header-studio">Studio</a>
+            <a href="./index.html" class="header-nav-list">Studio</a>
           </li>
           <li>
-            <a href="" class="header-portfolio">Portfolio</a>
+            <a href="" class="header-nav-list">Portfolio</a>
           </li>
           <li>
-            <a href="" class="header-contacts">Contacts</a>
+            <a href="" class="header-nav-list">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="address-header">
         <ul>
           <li class="address-list-item">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="adress-link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="address-list-item">
+            <a href="tel:+110001111111" class="adress-link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -109,7 +113,7 @@
               height="260"
             />
             <h3 class="section-2-h3">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="section-3-p">Product Designer</p>
           </li>
           <li>
             <img
@@ -119,7 +123,7 @@
               height="260"
             />
             <h3 class="section-2-h3">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="section-3-p">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -129,7 +133,7 @@
               height="260"
             />
             <h3 class="section-2-h3">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="section-3-p">Marketing</p>
           </li>
           <li>
             <img
@@ -139,13 +143,13 @@
               height="260"
             />
             <h3 class="section-2-h3">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="section-3-p">UI Designer</p>
           </li>
         </ul>
       </section>
 
-      <section>
-        <h2 class="header-our-portfolio" id="our-portfolio">Our Portfolio</h2>
+      <section class="section-4-full">
+        <h2 class="header-our-portfolio">Our Portfolio</h2>
         <ul class="port-sect">
           <li>
             <img
