--- a/index.html
+++ b/index.html
@@ -73,28 +73,28 @@
         <ul class="header-discr">
           <li class="section-2-list">
             <h3 class="section-2-h3">Strategy</h3>
-            <p>
+            <p class="section-2-p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="section-2-list">
             <h3 class="section-2-h3">Punctuality</h3>
-            <p>
+            <p class="section-2-p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="section-2-list">
             <h3 class="section-2-h3">Diligence</h3>
-            <p>
+            <p class="section-2-p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="section-2-list">
             <h3 class="section-2-h3">Technologies</h3>
-            <p>
+            <p class="section-2-p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -105,7 +105,7 @@
       <section class="section-3-main">
         <h2 class="our-team-header">Our Team</h2>
         <ul class="section-3-ul">
-          <li>
+          <li class="section-3-li">
             <img
               src="./images/img-3.jpg"
               alt="Mark Guerrero"
@@ -115,7 +115,7 @@
             <h3 class="section-2-h3">Mark Guerrero</h3>
             <p class="section-3-p">Product Designer</p>
           </li>
-          <li>
+          <li class="section-3-li">
             <img
               src="./images/img-2.jpg"
               alt="Tom Ford"
@@ -125,7 +125,7 @@
             <h3 class="section-2-h3">Tom Ford</h3>
             <p class="section-3-p">Frontend Developer</p>
           </li>
-          <li>
+          <li class="section-3-li">
             <img
               src="./images/img-1.jpg"
               alt="Camila Garcia"
@@ -135,7 +135,7 @@
             <h3 class="section-2-h3">Camila Garcia</h3>
             <p class="section-3-p">Marketing</p>
           </li>
-          <li>
+          <li class="section-3-li">
             <img
               src="./images/img.jpg"
               alt="Daniel Wilson"
