--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header>
       <nav>
         <a href="./index.html" class="logo-full"
-          >Web<span class="web-logo">Studio</span></a
+          >Web<span class="web-logo-header">Studio</span></a
         >
         <ul>
           <li>
@@ -65,7 +65,7 @@
         <button type="button" class="main-button">Order Service</button>
       </section>
 
-      <section>
+      <section class="section-2-main">
         <h2 class="section-2-h3">
           <!--hidden header2-->
           About
@@ -151,7 +151,7 @@
       <section class="section-4-full">
         <h2 class="header-our-portfolio">Our Portfolio</h2>
         <ul class="port-sect">
-          <li>
+          <li class="section-4-li">
             <img
               src="./images/img-hw-02/img-5.jpg"
               width="360"
@@ -161,7 +161,7 @@
             <h3 class="secton-4-h3">Banking App</h3>
             <p class="section-4-p">App</p>
           </li>
-          <li>
+          <li class="section-4-li">
             <img
               src="./images/img-hw-02/img-4.jpg"
               width="360"
@@ -171,7 +171,7 @@
             <h3 class="secton-4-h3">Cashless Payment</h3>
             <p class="section-4-p">Marketing</p>
           </li>
-          <li>
+          <li class="section-4-li">
             <img
               src="./images/img-hw-02/img-3.jpg"
               width="360"
@@ -181,7 +181,7 @@
             <h3 class="secton-4-h3">Meditation App</h3>
             <p class="section-4-p">App</p>
           </li>
-          <li>
+          <li class="section-4-li">
             <img
               src="./images/img-hw-02/img-2.jpg"
               width="360"
@@ -191,7 +191,7 @@
             <h3 class="secton-4-h3">Taxi Service</h3>
             <p class="section-4-p">Marketing</p>
           </li>
-          <li>
+          <li class="section-4-li">
             <img
               src="./images/img-hw-02/img-1.jpg"
               width="360"
@@ -201,7 +201,7 @@
             <h3 class="secton-4-h3">Screen Illustrations</h3>
             <p class="section-4-p">Design</p>
           </li>
-          <li>
+          <li class="section-4-li">
             <img
               src="./images/img-hw-02/img.jpg"
               width="360"
