--- a/index.html
+++ b/index.html
@@ -60,41 +60,41 @@
     </header>
 
     <main>
-      <section class="section-1-main">
+      <section class="section-main-title">
         <h1 class="main-header">Effective Solutions for Your Business</h1>
         <button type="button" class="main-button">Order Service</button>
       </section>
 
-      <section class="section-2-main">
-        <h2 class="section-2-h2">
+      <section>
+        <h2>
           <!--hidden header2-->
           About
         </h2>
-        <ul class="header-discr">
-          <li class="section-2-list">
-            <h3 class="section-2-h3">Strategy</h3>
-            <p class="section-2-p">
+        <ul>
+          <li class="second-list-title">
+            <h3 class="studio-discr">Strategy</h3>
+            <p class="studio-abzac">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="section-2-list">
-            <h3 class="section-2-h3">Punctuality</h3>
-            <p class="section-2-p">
+          <li class="second-list-title">
+            <h3 class="studio-discr">Punctuality</h3>
+            <p class="studio-abzac">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="section-2-list">
-            <h3 class="section-2-h3">Diligence</h3>
-            <p class="section-2-p">
+          <li class="second-list-title">
+            <h3 class="studio-discr">Diligence</h3>
+            <p class="studio-abzac">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="section-2-list">
-            <h3 class="section-2-h3">Technologies</h3>
-            <p class="section-2-p">
+          <li class="second-list-title">
+            <h3 class="studio-discr">Technologies</h3>
+            <p class="studio-abzac">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -102,106 +102,106 @@
         </ul>
       </section>
 
-      <section class="section-3-main">
+      <section class="section-our-team">
         <h2 class="our-team-header">Our Team</h2>
-        <ul class="section-3-ul">
-          <li class="section-3-li">
+        <ul>
+          <li class="our-team-list">
             <img
               src="./images/img-3.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3 class="section-3-h3">Mark Guerrero</h3>
-            <p class="section-3-p">Product Designer</p>
+            <h3 class="low-section-title">Mark Guerrero</h3>
+            <p class="our-team-abzac">Product Designer</p>
           </li>
-          <li class="section-3-li">
+          <li class="our-team-list">
             <img
               src="./images/img-2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3 class="section-3-h3">Tom Ford</h3>
-            <p class="section-3-p">Frontend Developer</p>
+            <h3 class="low-section-title">Tom Ford</h3>
+            <p class="our-team-abzac">Frontend Developer</p>
           </li>
-          <li class="section-3-li">
+          <li class="our-team-list">
             <img
               src="./images/img-1.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3 class="section-3-h3">Camila Garcia</h3>
-            <p class="section-3-p">Marketing</p>
+            <h3 class="low-section-title">Camila Garcia</h3>
+            <p class="our-team-abzac">Marketing</p>
           </li>
-          <li class="section-3-li">
+          <li class="our-team-list">
             <img
               src="./images/img.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3 class="section-3-h3">Daniel Wilson</h3>
-            <p class="section-3-p">UI Designer</p>
+            <h3 class="low-section-title">Daniel Wilson</h3>
+            <p class="our-team-abzac">UI Designer</p>
           </li>
         </ul>
       </section>
 
-      <section class="section-4-full">
+      <section>
         <h2 class="header-our-portfolio">Our Portfolio</h2>
-        <ul class="port-sect">
-          <li class="section-4-li">
+        <ul>
+          <li>
             <img
               src="./images/img-hw-02/img-5.jpg"
               width="360"
               height="300"
               alt="banking app"
             />
-            <h3 class="secton-4-h3">Banking App</h3>
-            <p class="section-4-p">App</p>
+            <h3 class="low-section-title">Banking App</h3>
+            <p class="portfolio-abzac">App</p>
           </li>
-          <li class="section-4-li">
+          <li>
             <img
               src="./images/img-hw-02/img-4.jpg"
               width="360"
               height="300"
               alt="cashless payment"
             />
-            <h3 class="secton-4-h3">Cashless Payment</h3>
-            <p class="section-4-p">Marketing</p>
+            <h3 class="low-section-title">Cashless Payment</h3>
+            <p class="portfolio-abzac">Marketing</p>
           </li>
-          <li class="section-4-li">
+          <li>
             <img
               src="./images/img-hw-02/img-3.jpg"
               width="360"
               height="300"
               alt="meditation app"
             />
-            <h3 class="secton-4-h3">Meditation App</h3>
-            <p class="section-4-p">App</p>
+            <h3 class="low-section-title">Meditation App</h3>
+            <p class="portfolio-abzac">App</p>
           </li>
-          <li class="section-4-li">
+          <li>
             <img
               src="./images/img-hw-02/img-2.jpg"
               width="360"
               height="300"
               alt="taxi service"
             />
-            <h3 class="secton-4-h3">Taxi Service</h3>
-            <p class="section-4-p">Marketing</p>
+            <h3 class="low-section-title">Taxi Service</h3>
+            <p class="portfolio-abzac">Marketing</p>
           </li>
-          <li class="section-4-li">
+          <li>
             <img
               src="./images/img-hw-02/img-1.jpg"
               width="360"
               height="300"
               alt="screen illustrations"
             />
-            <h3 class="secton-4-h3">Screen Illustrations</h3>
-            <p class="section-4-p">Design</p>
+            <h3 class="low-section-title">Screen Illustrations</h3>
+            <p class="portfolio-abzac">Design</p>
           </li>
-          <li class="section-4-li">
+          <li>
             <img
               src="./images/img-hw-02/img.jpg"
               width="360"
@@ -209,7 +209,7 @@
               alt="online courses"
             />
             <h3 class="secton-4-h3">Online Courses</h3>
-            <p class="section-4-p">Marketing</p>
+            <p class="portfolio-abzac">Marketing</p>
           </li>
         </ul>
       </section>
