--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               height="300"
               alt="online courses"
             />
-            <h3 class="secton-4-h3">Online Courses</h3>
+            <h3 class="low-section-title">Online Courses</h3>
             <p class="portfolio-abzac">Marketing</p>
           </li>
         </ul>
